--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Cards</title>
+<title>Cards Doubles</title>
 <link href="_css/index.css" type="text/css" rel="stylesheet"  />
 <script src="_js/jquery-1.7.1.js" type="text/javascript" ></script>
 <script src="_js/script.js" type="text/javascript" ></script>
@@ -13,7 +13,7 @@
 <div id="wrapper">
 	<h1>Cards Doubles via Javascript and CSS3</h1>
 	
-	<a href="https://github.com/codepo8/browsermemory"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+	<a href="https://github.com/mazenbesher/Cards-Doubles"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 	
 	<div class="cards"><!--cards added here--></div>
 	
