--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <div id="wrapper">
 	<h1>Cards Doubles via Javascript and CSS3</h1>
-	<p class="note">For webkit(chrome + safari) browsers only!</p>
+	<p class="note">Works best with webkit (chrome + safari) browsers only!</p>
 	
 	<a href="https://github.com/mazenbesher/Cards-Doubles">
 		<img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" />
